Closed Bug 352439 Opened 18 years ago Closed 18 years ago

Reference leaks in modutil

Categories

(NSS :: Tools, defect, P2)

3.11.3
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: julien.pierre, Assigned: julien.pierre)

Details

Attachments

(1 file)

Running some modutil commands, I ran into many assertions due to reference leaks on shutdown with NSS_STRICT_SHUTDOWN enabled (which I always have in my .cshrc). They are caused by some calls to SECMOD_FindModule without a corresponding SECMOD_DestroyModule . Patch forthcoming .
Attachment #238122 - Flags: superreview?(nelson)
Attachment #238122 - Flags: review?(alexei.volkov.bugs)
More testing is needed in this area. We don't test the list, rawlist, enable, set default, unset default options of modutil in all.sh .
QA Contact: tools → slavomir.katuscak
Priority: -- → P2
Target Milestone: --- → 3.11.4
Comment on attachment 238122 [details] [diff] [review]
Call SECMOD_DestroyModule where needed

r=alexei.volkov
Attachment #238122 - Flags: review?(alexei.volkov.bugs) → review+
Checking in pk11.c;
/cvsroot/mozilla/security/nss/cmd/modutil/pk11.c,v  <--  pk11.c
new revision: 1.23; previous revision: 1.22
done
Status: NEW → RESOLVED
Closed: 18 years ago
OS: SunOS → All
Resolution: --- → FIXED
Target Milestone: 3.11.4 → 3.12
Attachment #238122 - Flags: superreview?(nelson)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: