Fix for bug 352439 - reference leaks in modutil . r=alexei.volkov