security/nss/cmd/modutil/pk11.c
@@ -510,7 +510,7 @@ static int numDisableReasonStr =
 Error
 ListModule(char *moduleName)
 {
-    SECMODModule *module;
+    SECMODModule *module = NULL;
     PK11SlotInfo *slot;
     int slotnum;
     CK_INFO modinfo;
@@ -527,13 +527,15 @@ ListModule(char *moduleName)
     module = SECMOD_FindModule(moduleName);
     if(!module) {
 	PR_fprintf(PR_STDERR, errStrings[NO_SUCH_MODULE_ERR], moduleName);
-	return NO_SUCH_MODULE_ERR;
+	rv = NO_SUCH_MODULE_ERR;
+        goto loser;
     }
 
     if ((module->loaded) && 
 			(PK11_GetModInfo(module, &modinfo) != SECSuccess)) {
 	PR_fprintf(PR_STDERR, errStrings[MOD_INFO_ERR], moduleName);
-	return MOD_INFO_ERR;
+	rv = MOD_INFO_ERR;
+        goto loser;
     }
 
     /* Module info */
@@ -655,6 +657,10 @@ ListModule(char *moduleName)
     }
     PR_fprintf(PR_STDOUT, 
 	"\n-----------------------------------------------------------\n");
+loser:
+    if (module) {
+        SECMOD_DestroyModule(module);
+    }
     return rv;
 }
 
@@ -761,14 +767,16 @@ Error
 EnableModule(char *moduleName, char *slotName, PRBool enable)
 {
     int i;
-    SECMODModule *module;
+    SECMODModule *module = NULL;
     PK11SlotInfo *slot = NULL;
     PRBool found = PR_FALSE;
+    Error rv;
 
     module = SECMOD_FindModule(moduleName);
     if(!module) {
 	PR_fprintf(PR_STDERR, errStrings[NO_SUCH_MODULE_ERR], moduleName);
-	return NO_SUCH_MODULE_ERR;
+	rv = NO_SUCH_MODULE_ERR;
+        goto loser;
     }
 
     for(i=0; i < module->slotCount; i++) {
@@ -781,7 +789,8 @@ EnableModule(char *moduleName, char *slotName, PRBool enable)
 	    if(! PK11_UserEnableSlot(slot)) {
 		PR_fprintf(PR_STDERR, errStrings[ENABLE_FAILED_ERR],
 		    "enable", PK11_GetSlotName(slot));
-		return ENABLE_FAILED_ERR;
+		rv = ENABLE_FAILED_ERR;
+                goto loser;
 	    } else {
 		found = PR_TRUE;
 		PR_fprintf(PR_STDOUT, msgStrings[ENABLE_SUCCESS_MSG],
@@ -791,7 +800,8 @@ EnableModule(char *moduleName, char *slotName, PRBool enable)
 	    if(! PK11_UserDisableSlot(slot)) {
 		PR_fprintf(PR_STDERR, errStrings[ENABLE_FAILED_ERR],
 		    "disable", PK11_GetSlotName(slot));
-		return ENABLE_FAILED_ERR;
+		rv = ENABLE_FAILED_ERR;
+                goto loser;
 	    } else {
 		found = PR_TRUE;
 		PR_fprintf(PR_STDOUT, msgStrings[ENABLE_SUCCESS_MSG],
@@ -802,16 +812,23 @@ EnableModule(char *moduleName, char *slotName, PRBool enable)
 
     if(slotName && !found) {
 	PR_fprintf(PR_STDERR, errStrings[NO_SUCH_SLOT_ERR], slotName);
-	return NO_SUCH_SLOT_ERR;
+	rv = NO_SUCH_SLOT_ERR;
+        goto loser;
     }
 
     /* Delete and re-add module to save changes */
     if( SECMOD_UpdateModule(module) != SECSuccess ) {
 	PR_fprintf(PR_STDERR, errStrings[UPDATE_MOD_FAILED_ERR], moduleName);
-	return UPDATE_MOD_FAILED_ERR;
+	rv = UPDATE_MOD_FAILED_ERR;
+        goto loser;
     }
 
-    return SUCCESS;
+    rv = SUCCESS;
+loser:
+    if (module) {
+        SECMOD_DestroyModule(module);
+    }
+    return rv;
 }
 
 /*************************************************************************
@@ -822,7 +839,7 @@ EnableModule(char *moduleName, char *slotName, PRBool enable)
 Error
 SetDefaultModule(char *moduleName, char *slotName, char *mechanisms)
 {
-    SECMODModule *module;
+    SECMODModule *module = NULL;
     PK11SlotInfo *slot;
     int s, i;
     unsigned long mechFlags = getFlagsFromString(mechanisms, mechanismStrings,
@@ -887,6 +904,9 @@ SetDefaultModule(char *moduleName, char *slotName, char *mechanisms)
 
     errcode = SUCCESS;
 loser:
+    if (module) {
+        SECMOD_DestroyModule(module);
+    }
     return errcode;
 }
 
@@ -897,18 +917,20 @@ loser:
 Error
 UnsetDefaultModule(char *moduleName, char *slotName, char *mechanisms)
 {
-    SECMODModule * module;
+    SECMODModule * module = NULL;
     PK11SlotInfo *slot;
     int s, i;
     unsigned long mechFlags = getFlagsFromString(mechanisms,
 	mechanismStrings, numMechanismStrings);
     PRBool found = PR_FALSE;
+    Error rv;
 
     if (pk11_DefaultArray == NULL) {
 	pk11_DefaultArray = PK11_GetDefaultArray(&pk11_DefaultArraySize);
 	if (pk11_DefaultArray == NULL) {
 	    /* should assert. This shouldn't happen */
-	    return UNSPECIFIED_ERR;
+	    rv = UNSPECIFIED_ERR;
+            goto loser;
 	}
     }
 
@@ -917,7 +939,8 @@ UnsetDefaultModule(char *moduleName, char *slotName, char *mechanisms)
     module = SECMOD_FindModule(moduleName);
     if(!module) {
 	PR_fprintf(PR_STDERR, errStrings[NO_SUCH_MODULE_ERR], moduleName);
-	return NO_SUCH_MODULE_ERR;
+	rv = NO_SUCH_MODULE_ERR;
+        goto loser;
     }
 
     for(s=0; s < module->slotCount; s++) {
@@ -937,16 +960,23 @@ UnsetDefaultModule(char *moduleName, char *slotName, char *mechanisms)
     }
     if (slotName && !found) {
 	PR_fprintf(PR_STDERR, errStrings[NO_SUCH_SLOT_ERR], slotName);
-	return NO_SUCH_SLOT_ERR;
+	rv = NO_SUCH_SLOT_ERR;
+        goto loser;
     }
 
     /* Delete and re-add module to save changes */
     if( SECMOD_UpdateModule(module) != SECSuccess ) {
 	PR_fprintf(PR_STDERR, errStrings[UNDEFAULT_FAILED_ERR],
 	  moduleName);
-	return UNDEFAULT_FAILED_ERR;
+	rv = UNDEFAULT_FAILED_ERR;
+        goto loser;
     }
 
     PR_fprintf(PR_STDOUT, msgStrings[UNDEFAULT_SUCCESS_MSG]);
-    return SUCCESS;
+    rv = SUCCESS;
+loser:
+    if (module) {
+        SECMOD_DestroyModule(module);
+    }
+    return rv;
 }
